{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 95,
  "lineage": "931c3d38-6202-f78e-3bc4-36b5e0f1f2d7",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "eldorado_backend_instance",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9de6e2d2f067fca",
            "arn": "arn:aws:ec2:us-east-1:240388041814:instance/i-0931a0e9882787397",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0931a0e9882787397",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eldorado-terraform-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-015a6dfdcba3fddff",
            "private_dns": "ip-10-0-1-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.194",
            "public_dns": "ec2-54-162-90-177.compute-1.amazonaws.com",
            "public_ip": "54.162.90.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:240388041814:key/e2e66233-dab3-4b87-8c02-aa2ee72def04",
                "throughput": 125,
                "volume_id": "vol-094291f6c11b5514b",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078aedbf288b967d8",
            "tags": {
              "Environment": "prod",
              "Name": "eldorado-challenge-backend-instance",
              "Project": "eldorado-challenge"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "eldorado-challenge-backend-instance",
              "Project": "eldorado-challenge"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-090a774b25253ad64"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.keypair",
            "module.ec2.aws_security_group.eldorado_backend_sg",
            "module.vpc.aws_subnet.eldorado_public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eldorado_backend_sg",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240388041814:security-group/sg-090a774b25253ad64",
            "description": "Allow HTTP, HTTPS and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090a774b25253ad64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ping",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Application port",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eldorado-backend-sg",
            "name_prefix": "",
            "owner_id": "240388041814",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "eldorado-backend-sg",
              "Project": "eldorado-challenge"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "eldorado-backend-sg",
              "Project": "eldorado-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d2e32828be5e4dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eldorado_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240388041814:security-group/sg-0e2900b4d358cee55",
            "description": "Security group for Eldorado RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2900b4d358cee55",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL/Aurora from EC2 instances",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-090a774b25253ad64"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "eldorado-db-sg",
            "name_prefix": "",
            "owner_id": "240388041814",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "eldorado-db-sg",
              "Project": "eldorado-challenge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "eldorado-db-sg",
              "Project": "eldorado-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d2e32828be5e4dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.eldorado_backend_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240388041814:internet-gateway/igw-058a9b4944c84e634",
            "id": "igw-058a9b4944c84e634",
            "owner_id": "240388041814",
            "tags": {
              "Environment": "prod",
              "Name": "eldorado-igw",
              "Project": "eldorado-challenge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "eldorado-igw",
              "Project": "eldorado-challenge"
            },
            "vpc_id": "vpc-03d2e32828be5e4dc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240388041814:route-table/rtb-0452edcb75a1bc5b8",
            "id": "rtb-0452edcb75a1bc5b8",
            "owner_id": "240388041814",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-058a9b4944c84e634",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "eldorado-public-rt",
              "Project": "eldorado-challenge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "eldorado-public-rt",
              "Project": "eldorado-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d2e32828be5e4dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00754b0129e53a8ee",
            "route_table_id": "rtb-0452edcb75a1bc5b8",
            "subnet_id": "subnet-078aedbf288b967d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.eldorado_public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eldorado_private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240388041814:subnet/subnet-03f101a598b7df2c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f101a598b7df2c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "240388041814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "eldorado-private-subnet-a",
              "Project": "eldorado-challenge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "eldorado-private-subnet-a",
              "Project": "eldorado-challenge"
            },
            "vpc_id": "vpc-03d2e32828be5e4dc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eldorado_private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240388041814:subnet/subnet-0863e6c7cc66830ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0863e6c7cc66830ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "240388041814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "eldorado-private-subnet-b",
              "Project": "eldorado-challenge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "eldorado-private-subnet-b",
              "Project": "eldorado-challenge"
            },
            "vpc_id": "vpc-03d2e32828be5e4dc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eldorado_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240388041814:subnet/subnet-078aedbf288b967d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078aedbf288b967d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "240388041814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "eldorado-public-subnet",
              "Project": "eldorado-challenge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "eldorado-public-subnet",
              "Project": "eldorado-challenge"
            },
            "vpc_id": "vpc-03d2e32828be5e4dc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240388041814:vpc/vpc-03d2e32828be5e4dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0992d3b25525debfe",
            "default_route_table_id": "rtb-01232a5fcd7c569f8",
            "default_security_group_id": "sg-08f9a29a69dc92424",
            "dhcp_options_id": "dopt-011c477672e9f72b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d2e32828be5e4dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01232a5fcd7c569f8",
            "owner_id": "240388041814",
            "tags": {
              "Environment": "prod",
              "Name": "eldorado-vpc",
              "Project": "eldorado-challenge"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "eldorado-vpc",
              "Project": "eldorado-challenge"
            }
          }
        }
      ]
    }
  ]
}